// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bails when a .po file is malformed 1`] = `
PluginError {
  "fileName": "en-US.po",
  "message": "There are no translation strings for \\"en-US\\"",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`bails when multiple .po files of the same name are present 1`] = `
PluginError {
  "fileName": "a/en-US.po",
  "message": "Language 'en-US' already loaded",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`bails when the default langugage is not present 1`] = `
PluginError {
  "message": "No translation file found for default language \\"es-ES\\"",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`gracefully fails when a streaming-mode file is passed in 1`] = `
PluginError {
  "fileName": "en-US.po",
  "message": "Streaming mode is not supported.",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`rejects .po files whose names are not acceptable language tags e.po 1`] = `
PluginError {
  "fileName": "e.po",
  "message": "Translation file e.po has a bad name. Translation files must be named en-US.po, de-DE.po, es-ES.po, fr-FR.po, it-IT.po, ja-JP.po, ko-KR.po, nl-NL.po, sv-SE.po, zh-CN.po, zh-TW.po, pt-BR.po, id-ID.po, ro-RO.po, ru-RU.po, pl-PL.po, cs-CZ.po or nb-NO.po.",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`rejects .po files whose names are not acceptable language tags en-USA.po 1`] = `
PluginError {
  "fileName": "en-USA.po",
  "message": "Translation file en-USA.po has a bad name. Translation files must be named en-US.po, de-DE.po, es-ES.po, fr-FR.po, it-IT.po, ja-JP.po, ko-KR.po, nl-NL.po, sv-SE.po, zh-CN.po, zh-TW.po, pt-BR.po, id-ID.po, ro-RO.po, ru-RU.po, pl-PL.po, cs-CZ.po or nb-NO.po.",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`rejects .po files whose names are not acceptable language tags sl-IT-nedis.po 1`] = `
PluginError {
  "fileName": "sl-IT-nedis.po",
  "message": "Translation file sl-IT-nedis.po has a bad name. Translation files must be named en-US.po, de-DE.po, es-ES.po, fr-FR.po, it-IT.po, ja-JP.po, ko-KR.po, nl-NL.po, sv-SE.po, zh-CN.po, zh-TW.po, pt-BR.po, id-ID.po, ro-RO.po, ru-RU.po, pl-PL.po, cs-CZ.po or nb-NO.po.",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;
